--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,8 @@
     "dev": "concurrently yarn:dev:*",
     "build-admin": "ts-node compile-admin-ui.ts",
     "build": "tsc",
-    "start:server": "node ./dist/index.js",
-    "start:worker": "node ./dist/index-worker.js",
+    "start:server": "node ./dist/src/index.js",
+    "start:worker": "node ./dist/src/index-worker.js",
     "start": "concurrently yarn:start:*",
     "migration:generate": "ts-node migration generate",
     "migration:run": "ts-node migration run",
@@ -22,6 +22,7 @@
     "@vendure/core": "1.7.1",
     "@vendure/email-plugin": "1.7.1",
     "@vendure/ui-devkit": "^1.7.1",
+    "aws-sdk": "^2.1219.0",
     "caniuse-lite": "1.0.30001303",
     "i18n-auto-translation": "^1.1.15",
     "pg": "8.8.0",
