--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -5,7 +5,7 @@
       "src": "nuxt.config.js",
       "use": "@nuxtjs/vercel-builder",
       "config": {
-        "internalServer": true
+        "internalServer": false
       }
     }
   ]
